# termin_muenchen_kvr

./: .env.example  .gitignore  AI_FEATURES.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LANGUAGE_FEATURES.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  Makefile  QUICKSTART.md  QUICKSTART_REFACTORED.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  ai_assistant.py  alembic.ini  booking_handler.py  bot_commands.py  bot_commands.py.old  config.py  database.py  docker-compose.yml  i18n.py  models.py  pyproject.toml  repositories.py  requirements.txt  services_catalog.json  services_manager.py  telegram_bot.py  telegram_bot.py.old  telegram_bot_old.py  termin_tracker.py  translations.py
DOCS/: ANALYTICS_INTEGRATION.md  BOOKING_FEATURE.md  CAPTCHA_THREADING_OPTIMIZATION.md  OFFICE_SELECTION_UPDATE.md  QUEUE_MODE_IMPLEMENTATION.md  UMAMI_SETUP.md
alembic/: env.py
locales/: messages.pot
locales/de/LC_MESSAGES/: messages.mo  messages.po
src/: __init__.py  booking_api.py  config.py  database.py  db_models.py  migrate_db.py  models.py  munich_api_client.py  repositories.py  services_manager.py  termin_tracker.py
src/commands/: __init__.py  booking.py  help.py  menu.py  myservices.py  setdates.py  start.py  stats.py  status.py  stop.py  subscribe.py
src/handlers/: __init__.py  buttons.py
src/services/: __init__.py  analytics_service.py  appointment_checker.py  notification_service.py  queue_manager.py
tests/: __init__.py  conftest.py  test_booking_flow.py  test_business_logic.py  test_models.py  test_repositories.py
(+4 files in other folders)
